# signal_sniper_plot

./: CMakeLists.txt  pyproject.toml  xplot_main.cpp
.github/workflows/: build.yml
docs/: DEPENDENCIES.md  LICENSE  README.md
github/workflows/: build.yml
inc/: plot.h  plot.hpp  plot_session.h  trace_utils.h
pybind_src/: module.cc
python/: test_plot.py
scripts/: build_deb.sh  build_rpm.sh  env.sh  setup_debug_env.sh
src/: plot.cc  plot.cpp  plot_session.cc  trace_utils.cc
test/: main.cpp
tests/: test_plot.cc
