[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11",
    "setuptools",
    "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "signal_sniper_plot"
version = "0.1.0"
description = "A C++ plotting library with a pybind11 Python wrapper"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    # No runtime Python deps yet
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.scikit-build.build]
module = "signal_sniper_plot_py"
build-dir = "build"

[tool.scikit-build.cmake]
version = "3.16"
args = [
    "-DENABLE_PYBIND=ON",
    "-DENABLE_PYTHON_INSTALL=ON"
]

[tool.scikit-build.editable]
mode = "redirect"

[tool.scikit-build.sdist]
include = [
    "src/**/*",
    "inc/**/*",
    "pybind_src/**/*",
    "python/**/*",
    "CMakeLists.txt",
    "README.md",
    "LICENSE"
]
